# kagura-planner

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml  repo.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-06-08-kagura-planner-plugin-packaging.md  2026-06-08-kagura-planner.md
docs/superpowers/specs/: 2026-06-08-kagura-planner-design.md  2026-06-08-kagura-planner-plugin-packaging-design.md
skills/plan/: SKILL.md
src/kagura_planner/: __init__.py  cli.py  config.py  proc.py
src/kagura_planner/doctor/: checks.py  registry.py  render.py  result.py
src/kagura_planner/plan/: __init__.py  brain.py  doc.py  envelope.py  memory.py  render.py  result.py
tests/: _constants.py  conftest.py  test_cli.py  test_config.py  test_plugin.py  test_proc.py
tests/doctor/: test_checks.py  test_checks_extended.py  test_checks_launcher.py  test_registry.py  test_render.py  test_render_extended.py  test_result.py
tests/plan/: test_brain.py  test_doc.py  test_envelope.py  test_memory.py  test_memory_extended.py  test_orchestrator.py  test_render.py  test_render_extended.py  test_result.py
